# imx-starknet

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  hardhat.config.ts  package-lock.json  package.json  protostar.toml  pyproject.toml  requirements.txt  setup.py  tsconfig.json
.github/: dependabot.yml
.github/workflows/: lint-build-test.yml
docs/: erc20.md  erc2981.md  erc721bridge.md
immutablex/starknet/: README.md
tests/functional/ethereum/: StandardERC721Bridge.test.ts
tests/functional/starknet/: AccessControl.test.ts  PaymentSplitter.test.ts
tests/functional/starknet/erc20/: ERC20_Mintable_Capped.test.ts
tests/functional/starknet/erc721/: Bridgeable.test.ts  ERC721.test.ts  Royalties.test.ts
tests/functional/starknet/protostar/: test_PaymentSplitter.cairo
tests/functional/starknet/protostar/erc20/: test_ERC20_Mintable_Capped.cairo
tests/functional/starknet/protostar/erc721/: test_Bridgeable.cairo  test_ERC721.cairo  test_ERC721_Metadata.cairo  test_Royalties.cairo
tests/functional/starknet/utils/: deployScripts.ts
tests/utils/: starknetDeploys.ts  starknetUtils.ts
