[tool.poetry]
name = "imx-cairo"
version = "0.3.0"
description = "Immutable X StarkNet contracts"
authors = ["Immutable"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
cairo-lang = "^0.10.0"
imx-openzeppelin-cairo-contracts = "0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
